# RoboPilot

./: .gitignore  LICENSE  README.md  pyproject.toml  run_bridge.bat  run_isaac.bat  setup.bat
config/: factory_layout.yaml  robot_config.yaml
docker/: Dockerfile.mcp  docker-compose.yaml
isaac_sim/: bridge_server.py  factory_cell.py
src/isaac_bridge/: client.py
src/mcp_server/: server.py
src/ros2_bridge/: client.py
src/vision/: camera_feed.py
tests/: test_ros2_bridge.py  test_server.py
